fix alignment and main index

--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -170,5 +170,5 @@
 		.skill p, #contact-form{ display:none; }
 		.contact-info-2 li{ float:none; }
 		.contact-info-2 .hide-on-phone{ display:none; }
-		.cv-item-description { background-color:#c5c5c5;  }
+        .cv-item-description h6{ padding:0px; }
 	}
